fix: make $ENV{IDF_PATH}/tools/cmake/project.cmake include optional

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -32,7 +32,7 @@ jobs:
           sudo apt update -y
           sudo apt install -y doxygen graphviz mscgen
       - run: cmake -Bbuild
-      - run: cmake --build build --parallel --target OpenRemiseDocs
+      - run: cmake --build build --parallel --target FirmwareDocs
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
